--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.67",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "firebase": "^10.7.1",
     "react": "^18.2.0",
@@ -44,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "tailwindcss": "^3.3.6"
   }
 }
